kluster/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-java-app
  template:
    metadata:
      labels:
        app: simple-java-app
    spec:
      containers:
      - name: simple-java-app
        image: murogram/simple-java-app:latest 
        ports:
        - containerPort: 8080
