kluster/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-java-app-service
spec:
  type: ClusterIP
  selector:
    app: simple-java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
